Add task box and change tablist

--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -26,6 +26,7 @@ html, body
 
 #content
   width: 950px
+  min-height: 400px
   margin: 0 auto
   -webkit-border-radius: 5px
   -moz-border-radius: 5px
@@ -48,33 +49,23 @@ html, body
   position: absolute
   margin-bottom: 10px
   top: 200px
-  left: 50px
+  left: 135px
+  -webkit-border-radius: 5px
+  -moz-border-radius: 5px
+  border: 1px solid
+  border-radius: 5px
   a
     display: block
     width: 100px
     padding: 5px
+    background: #DA0114
+    border-bottom: 1px solid black
+    color: black
     text-align: center
-    margin-bottom: 7px
-    -webkit-border-radius: 5px
-    -moz-border-radius: 5px
-    border-radius: 5px
-    background-color: #f6fcfc
-    background: #f7f7f7
-    background: -moz-linear-gradient(90deg, #DEDEDE, white)
-    /* Firefox
-    background: -webkit-gradient(linear, left top, left bottom, from(white), to(#DEDEDE))
-    /* Webkit
-    border: 1px solid #aaa
-
-#search #left
-  margin-bottom: 0px
-  margin-top: 0px
-  width: 470px
-
-#search #right
-  margin-bottom: 0px
-  margin-top: 15px
-  width: 400px
+    text-decoration: none
+  a:hover
+    background: antiquewhite
+    text-decoration: underline
 
 .clear
   clear: both
