--- a/app/assets/stylesheets/projects.css.sass
+++ b/app/assets/stylesheets/projects.css.sass
@@ -16,6 +16,6 @@
 
     // A changer. Sérieusement...
     .light
-      background: powderblue
+      background: lemonchiffon
     .dark
-      background: seashell
+      background: indianred
