Open and close task working

--- a/app/assets/stylesheets/time_tracking.css.sass
+++ b/app/assets/stylesheets/time_tracking.css.sass
@@ -44,8 +44,10 @@
 
   #old_tasks_list
     table
-      width: 100%
+      width: 96%
       border: none
+      margin-left: 2%
+      margin-top: 20px
       .task
         font-size: 14px
         border-bottom: thick
